[gd_scene format=3 uid="uid://jcymydi626aj"]

[ext_resource type="Script" uid="uid://drd77vk61uwih" path="res://scenes/test/message_viewer.gd" id="1_ydovf"]
[ext_resource type="PackedScene" uid="uid://ceg1lx3f2vxs4" path="res://scenes/test/user_address.tscn" id="2_ydovf"]

[node name="MessageViewer" type="ScrollContainer" unique_id=1750174540]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -244.0
offset_right = 272.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("1_ydovf")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=684723919]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer" unique_id=1592093738]
layout_mode = 2
text = "Title"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=1725234821]
layout_mode = 2

[node name="ReporterAddress" parent="VBoxContainer/HBoxContainer2" unique_id=433820523 instance=ExtResource("2_ydovf")]
layout_mode = 2
size_flags_horizontal = 3
title = "Reporter"

[node name="OffenderAddress" parent="VBoxContainer/HBoxContainer2" unique_id=1910001115 instance=ExtResource("2_ydovf")]
layout_mode = 2
size_flags_horizontal = 3
title = "Offender"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=1849364008]
layout_mode = 2
bbcode_enabled = true
text = "This is an example text label. I don't do anything yet, I just exist.

Anyways [b]PLEASE[/b] do something about the [i]OBVIOUS IGNORING OF THE RULES[/i] I swear to god I am going to [wave=2]Cry[/wave] if this keeps up..."
fit_content = true

[node name="EvidenceButton" type="Button" parent="VBoxContainer" unique_id=1164824022]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "View Evidence"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=392458356]
layout_mode = 2

[node name="IgnoreButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=209263165]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Ignore"

[node name="WarnOffenderButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1135933058]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Warn
Offender"

[node name="KickOffenderButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1554210767]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Kick
Offender"

[node name="FalseReportButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1712271595]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "False Report!"
